# manuelita_api

./: Dockerfile  app.py  app2.py  main.py  pyproject.toml  requirements.txt
data/raw/: datos_estructurados.json.txt  fundacionmanuelita_org_home.md  fundacionmanuelita_org_noticias.md  linkedin_com_shareArticle.md  manuelita_com_alimenticio.md  manuelita_com_aviso_autorizacion_tratamiento_datos_personales.md  manuelita_com_azucar.md  manuelita_com_blog.md  manuelita_com_contacto.md  manuelita_com_energetico.md  manuelita_com_estrategia_corporativa.md  manuelita_com_fundacion_manuelita.md  manuelita_com_gobierno_corporativo.md  manuelita_com_historia.md  manuelita_com_home.md  manuelita_com_linea_etica.md  manuelita_com_manuelita_160.md  manuelita_com_manuelita_noticias.md  manuelita_com_manuelita_noticias_celebramos_con_nuestras_estrellas_laredo_mas_de_250_colaboradores_reconocidos_por.md  manuelita_com_manuelita_noticias_fundacion_manuelita_10_anos_transformando_vidas_a_traves_de_la_educacion.md  manuelita_com_manuelita_noticias_informe_de_sostenibilidad_2023_2024.md  manuelita_com_manuelita_noticias_la_agroindustria_en_america_latina_una_apuesta_por_el_desarrollo_sostenible_y_el_.md  manuelita_com_manuelita_noticias_luis_guillermo_amu_galardonado_como_afrocolombiano_2024.md  manuelita_com_manuelita_noticias_manuelita_160_anos_comprometida_con_un_futuro_sostenible.md  manuelita_com_manuelita_noticias_manuelita_lanza_programa_huerteritos_dirigido_a_la_comunidad.md  manuelita_com_manuelita_noticias_somos_la_primera_empresa_del_sector_agroindustrial_en_responsabilidad_esg.md  (+27 more)
