[project]
name = "manuelita"
version = "0.1.0"
description = "Chatbot conversacional para Manuelita"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gradio==4.44.1",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-huggingface>=0.1.0",
    "sentence-transformers==2.7.0",
    "huggingface-hub==0.23.0",
    "langchain-chroma>=0.1.1",
    "chromadb==0.5.0",
    "rank-bm25==0.2.2",
    "langchain-text-splitters>=0.3.0",
    "python-dotenv==1.0.1",
    "numpy>=1.25.0",
    "langchain-ollama>=0.3.0",
    "langsmith>=0.3.45",
]
